Improved CLI + tests
* New CLI capabilities:
 * 'samples' : list available ".milc"
 * 'run --pick': interactive picker to select and run sample
 * 'run sample:<name>' resolve a sample by name and run it
- Fix and refactorise some code parts
- Add tests for new CLI capabilities

--- a/tests/MinImpLangComp.Tests/MinImpLangComp.Tests.csproj
+++ b/tests/MinImpLangComp.Tests/MinImpLangComp.Tests.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\MinImpLangComp.CLI\MinImpLangComp.CLI.csproj" />
     <ProjectReference Include="..\..\src\MinImpLangComp\MinImpLangComp.csproj" />
   </ItemGroup>
 
